--- a/app/src/main/res/drawable-xxhdpi/ticket_button.xml
+++ b/app/src/main/res/drawable-xxhdpi/ticket_button.xml
@@ -2,11 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/secondaryProgress">
         <shape
-            android:useLevel="false"
             android:innerRadiusRatio="2.63"
-            android:shape="oval">
-            <solid
-                android:color="@color/primary_color" />
+            android:shape="oval"
+            android:useLevel="false">
+            <solid android:color="@color/primary_color" />
         </shape>
     </item>
 </layer-list>
