--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -1,178 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_centerVertical="true"
     android:layout_height="match_parent"
-    android:useDefaultMargins="false"
-    android:rowOrderPreserved="false"
-    android:columnOrderPreserved="false"
-    android:rowCount="3"
-    android:columnCount="3"
-    android:longClickable="false"
+    android:layout_centerVertical="true"
     android:clickable="false"
-    android:orientation="vertical">
+    android:columnCount="3"
+    android:columnOrderPreserved="false"
+    android:longClickable="false"
+    android:orientation="vertical"
+    android:rowCount="3"
+    android:rowOrderPreserved="false"
+    android:useDefaultMargins="false">
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/your_ticket"
+        android:layout_column="0"
+        android:layout_columnSpan="3"
         android:layout_row="0"
         android:layout_rowSpan="1"
-        android:singleLine="false"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:textColor="@android:color/black"
         android:fontFamily="@string/font"
-        android:textAllCaps="true"
-        android:inputType="none"
         android:gravity="center"
+        android:inputType="none"
         android:minHeight="180sp"
-        android:textSize="23sp"/>
+        android:singleLine="false"
+        android:text="@string/your_ticket"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="23sp" />
 
     <ProgressBar
-        android:progressDrawable="@drawable/countdown_ring"
-        style="?android:attr/progressBarStyleHorizontal"
         android:id="@+id/countdown_progressbar"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_columnSpan="3"
+        android:layout_gravity="center"
+        android:layout_row="0"
+        android:layout_rowSpan="3"
         android:indeterminate="false"
         android:max="1000"
-        android:layout_row="0"
-        android:layout_rowSpan="3"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
         android:minHeight="700sp"
         android:minWidth="700sp"
-        android:layout_gravity="center"
-    />
+        android:progressDrawable="@drawable/countdown_ring" />
 
 
     <LinearLayout
+        android:id="@+id/timeleft_all"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_rowSpan="3"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_row="0"
+        android:layout_rowSpan="3"
         android:columnCount="1"
+        android:gravity="center"
+        android:orientation="horizontal"
         android:rowCount="3"
         android:rowOrderPreserved="false"
         android:useDefaultMargins="false"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:visibility="invisible"
-        android:id="@+id/timeleft_all">
+        android:visibility="invisible">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/timeleft"
-            android:textSize="90sp"
-            android:fontFamily="@string/font"
-            android:textColor="@android:color/black" />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/minutes"
             android:fontFamily="@string/font"
             android:textColor="@android:color/black"
-            android:textSize="30sp"
-            android:gravity="center"
+            android:textSize="90sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:paddingBottom="14sp" />
+            android:fontFamily="@string/font"
+            android:gravity="center"
+            android:paddingBottom="14sp"
+            android:text="@string/minutes"
+            android:textColor="@android:color/black"
+            android:textSize="30sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_rowSpan="3"
         android:layout_column="0"
         android:layout_columnSpan="3"
-        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_row="0"
+        android:layout_rowSpan="3"
         android:columnCount="1"
+        android:gravity="center"
+        android:orientation="horizontal"
         android:rowCount="3"
         android:rowOrderPreserved="false"
-        android:useDefaultMargins="false"
-        android:gravity="center"
-        android:layout_gravity="center">
+        android:useDefaultMargins="false">
 
         <ImageButton
+            android:id="@+id/button_get_ticket"
             android:layout_width="250sp"
             android:layout_height="250sp"
-            android:id="@+id/button_get_ticket"
-            android:src="@drawable/ic_card_travel_black_48dp"
             android:background="@drawable/ticket_button"
-            />
+            android:src="@drawable/ic_card_travel_black_48dp" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_columnSpan="1"
+        android:layout_margin="10dp"
         android:layout_row="2"
         android:layout_rowSpan="1"
-        android:layout_margin="10dp">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:text="@string/charge"
-            android:singleLine="false"
             android:layout_gravity="start"
-            android:textColor="@android:color/black"
             android:fontFamily="@string/font"
-            android:textAllCaps="true"
             android:inputType="none"
+            android:singleLine="false"
+            android:text="@string/charge"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/chargeText"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:text="@string/empty_charge"
             android:layout_gravity="start"
-            android:id="@+id/chargeText"
-            android:singleLine="true"
-            android:textColor="@android:color/black"
             android:fontFamily="@string/font"
+            android:singleLine="true"
+            android:text="@string/empty_charge"
+            android:textColor="@android:color/black"
             android:textSize="23sp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_column="2"
         android:layout_columnSpan="1"
+        android:layout_margin="10dp"
         android:layout_row="2"
         android:layout_rowSpan="1"
-        android:layout_margin="10dp">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:text="@string/latest"
             android:layout_gravity="end"
-            android:singleLine="false"
-            android:textColor="@android:color/black"
             android:fontFamily="@string/font"
+            android:singleLine="false"
+            android:text="@string/latest"
             android:textAllCaps="true"
+            android:textColor="@android:color/black"
             android:textSize="13sp" />
 
         <TextView
             android:id="@+id/ticket_last_gotten"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:text="@string/time_never"
             android:layout_gravity="end"
-            android:singleLine="true"
-            android:textColor="@android:color/black"
             android:fontFamily="@string/font"
+            android:singleLine="true"
+            android:text="@string/time_never"
+            android:textColor="@android:color/black"
             android:textSize="23sp" />
 
     </LinearLayout>
