--- a/app/src/main/res/layout/busline_row.xml
+++ b/app/src/main/res/layout/busline_row.xml
@@ -13,14 +13,14 @@
         android:gravity="center"
         android:text="55"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30dp" />
+        android:textSize="26dp" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.78"
         android:orientation="vertical"
-        android:id="@+id/busLineButtonLayout">
+        android:id="@+id/busLineButtonLayout"
+        android:layout_gravity="center_vertical">
 
     </LinearLayout>
 </LinearLayout>
