--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -6,18 +6,17 @@
               android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height"
-        android:background="@color/bg_grey_300"
-        android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/spacing_normal">
 
         <TextView
             android:id="@+id/transportLineName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/spacing_normal"
-            android:layout_marginStart="@dimen/spacing_normal"
             android:textAppearance="?android:attr/textAppearanceLarge"
             tools:text="99"/>
 
@@ -31,36 +30,41 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             tools:text="Riktning"/>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/spacing_normal"
+        android:layout_marginStart="@dimen/spacing_normal"
+        android:orientation="horizontal">
+
         <TextView
-            android:id="@+id/textFrom"
+            android:id="@+id/textWantToGoFrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/spacing_normal"
-            android:layout_marginStart="@dimen/spacing_normal"
-            android:text="@string/text_from"
+            android:text="@string/text_want_to_go_from"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         <TextView
             android:id="@+id/transportFromStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/spacing_normal"
-            android:layout_marginStart="@dimen/spacing_normal"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"
+            android:paddingStart="@dimen/spacing_tiny"
+            android:paddingEnd="@dimen/spacing_tiny"
             tools:text="Hållplats"/>
+
+        <TextView
+            android:id="@+id/textFrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_to"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textWantToGoTo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/spacing_normal"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:layout_marginTop="@dimen/spacing_normal"
-        android:text="@string/text_want_to_go_to"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     <ListView
         android:id="@+id/destinationsListView"
