--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -10,7 +10,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal"
-        android:padding="@dimen/spacing_normal">
+        android:paddingBottom="@dimen/spacing_tiny"
+        android:paddingEnd="@dimen/spacing_normal"
+        android:paddingLeft="@dimen/spacing_normal"
+        android:paddingRight="@dimen/spacing_normal"
+        android:paddingStart="@dimen/spacing_normal"
+        android:paddingTop="@dimen/spacing_normal">
 
         <TextView
             android:id="@+id/transportLineName"
@@ -27,10 +32,52 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/spacing_small"
             android:layout_marginStart="@dimen/spacing_small"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:maxEms="8"
+            android:maxLines="1"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceLarge"
             tools:text="Riktning"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:paddingEnd="@dimen/spacing_normal"
+        android:paddingLeft="@dimen/spacing_normal"
+        android:paddingRight="@dimen/spacing_normal"
+        android:paddingStart="@dimen/spacing_normal"
+        android:paddingBottom="@dimen/spacing_small">
+
+        <TextView
+            android:id="@+id/textFrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="@string/text_from"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <TextView
+            android:id="@+id/transportFromStop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingEnd="@dimen/spacing_tiny"
+            android:paddingStart="@dimen/spacing_tiny"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"
+            tools:text="Hållplats"/>
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -40,27 +87,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textWantToGoFrom"
+            android:id="@+id/textWantToGoTo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_want_to_go_from"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-        <TextView
-            android:id="@+id/transportFromStop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textStyle="bold"
-            android:paddingStart="@dimen/spacing_tiny"
-            android:paddingEnd="@dimen/spacing_tiny"
-            tools:text="Hållplats"/>
-
-        <TextView
-            android:id="@+id/textFrom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/text_to"
+            android:maxLines="1"
+            android:text="@string/text_want_to_go_to"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     </LinearLayout>
@@ -69,5 +100,9 @@
     <ListView
         android:id="@+id/destinationsListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/spacing_small"
+        android:layout_marginLeft="@dimen/spacing_small"
+        android:layout_marginRight="@dimen/spacing_small"
+        android:layout_marginStart="@dimen/spacing_small"/>
 </LinearLayout>
