--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -31,6 +31,9 @@
             android:layout_gravity="center_vertical"
             android:background="@drawable/info_circle" />
 
+
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -158,6 +161,16 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
+
+        <Button
+            android:id="@+id/info_stop"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/info_stop_selector"
+            android:layout_above="@+id/info_source"
+            android:layout_toRightOf="@+id/timeTilArrival"
+            android:layout_toEndOf="@+id/timeTilArrival" />
 
     </RelativeLayout>
 
