--- a/app/src/main/res/layout/busline_button.xml
+++ b/app/src/main/res/layout/busline_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:paddingRight="@dimen/spacing_normal"
@@ -13,19 +13,20 @@
         android:text="Large Text"
         android:id="@+id/stationTextView"
         android:layout_gravity="center_vertical"
-        android:textSize="19.71sp" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
+        android:textSize="19.71sp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:maxLines="1" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:measureWithLargestChild="false">
+        android:measureWithLargestChild="false"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,4 +45,4 @@
             android:gravity="center"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
