--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:text="@string/text_from"
+            android:text="@string/from"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         <TextView
@@ -69,8 +69,8 @@
             android:layout_gravity="center"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingEnd="@dimen/spacing_tiny"
-            android:paddingStart="@dimen/spacing_tiny"
+            android:paddingRight="@dimen/spacing_tiny"
+            android:paddingLeft="@dimen/spacing_tiny"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             tools:text="Hållplats"/>
