--- a/app/src/main/res/layout/busline_button.xml
+++ b/app/src/main/res/layout/busline_button.xml
@@ -17,6 +17,8 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/timeLeftLinearLayout"
+        android:layout_toLeftOf="@+id/timeLeftLinearLayout"
         android:maxLines="1" />
 
     <LinearLayout
@@ -26,7 +28,8 @@
         android:measureWithLargestChild="false"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:id="@+id/timeLeftLinearLayout">
 
         <TextView
             android:layout_width="wrap_content"
