Added circle behind line number

--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -23,7 +23,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            tools:text="99"/>
+            tools:text="99"
+            android:background="@drawable/bus_number_circle"
+            android:textColor="@color/text_color_white"/>
 
         <TextView
             android:id="@+id/transportLineDirection"
