--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerVertical="true"
@@ -15,10 +15,6 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_row="0"
-        android:layout_rowSpan="1"
         android:fontFamily="@string/font"
         android:gravity="center"
         android:inputType="none"
@@ -34,11 +30,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
         android:layout_gravity="center"
-        android:layout_row="0"
-        android:layout_rowSpan="3"
         android:indeterminate="false"
         android:max="1000"
         android:minHeight="700sp"
@@ -50,11 +42,7 @@
         android:id="@+id/timeleft_all"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
         android:layout_gravity="center"
-        android:layout_row="0"
-        android:layout_rowSpan="3"
         android:columnCount="1"
         android:gravity="center"
         android:orientation="horizontal"
@@ -86,11 +74,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
         android:layout_gravity="center"
-        android:layout_row="0"
-        android:layout_rowSpan="3"
         android:columnCount="1"
         android:gravity="center"
         android:orientation="horizontal"
@@ -109,11 +93,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
         android:layout_margin="10dp"
-        android:layout_row="2"
-        android:layout_rowSpan="1"
         android:orientation="vertical">
 
         <TextView
@@ -144,11 +124,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_column="2"
-        android:layout_columnSpan="1"
         android:layout_margin="10dp"
-        android:layout_row="2"
-        android:layout_rowSpan="1"
         android:orientation="vertical">
 
         <TextView
@@ -175,4 +151,4 @@
 
     </LinearLayout>
 
-</GridLayout>
+</RelativeLayout>
