--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -2,54 +2,48 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_centerVertical="true"
-    android:clickable="false"
-    android:columnCount="3"
-    android:columnOrderPreserved="false"
-    android:longClickable="false"
-    android:orientation="vertical"
-    android:rowCount="3"
-    android:rowOrderPreserved="false"
-    android:useDefaultMargins="false">
+    android:paddingEnd="@dimen/spacing_normal"
+    android:paddingStart="@dimen/spacing_normal"
+    android:paddingBottom="@dimen/spacing_normal">
 
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@string/font"
-        android:gravity="center"
         android:inputType="none"
-        android:minHeight="180sp"
         android:singleLine="false"
         android:text="@string/your_ticket"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
-        android:textSize="23sp" />
+        android:textSize="23sp"
+        android:layout_above="@+id/countdown_progressbar"
+        android:layout_centerHorizontal="true" />
 
     <ProgressBar
         android:id="@+id/countdown_progressbar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:indeterminate="false"
-        android:max="1000"
-        android:minHeight="700sp"
-        android:minWidth="700sp"
-        android:progressDrawable="@drawable/countdown_ring" />
+        android:progressDrawable="@drawable/countdown_ring"
+        android:max="10000"
+        android:layout_alignRight="@+id/button_get_ticket"
+        android:layout_alignEnd="@+id/button_get_ticket"
+        android:layout_alignLeft="@+id/button_get_ticket"
+        android:layout_alignStart="@+id/button_get_ticket"
+        android:layout_alignTop="@+id/button_get_ticket"
+        android:layout_alignBottom="@+id/button_get_ticket" />
 
 
     <LinearLayout
         android:id="@+id/timeleft_all"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="1"
-        android:gravity="center"
+        android:visibility="invisible"
         android:orientation="horizontal"
-        android:rowCount="3"
-        android:rowOrderPreserved="false"
-        android:useDefaultMargins="false"
-        android:visibility="invisible">
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/timeleft"
@@ -62,39 +56,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
             android:fontFamily="@string/font"
-            android:gravity="center"
-            android:paddingBottom="14sp"
             android:text="@string/payment_minutes"
             android:textColor="@android:color/black"
             android:textSize="30sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="1"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:rowCount="3"
-        android:rowOrderPreserved="false"
-        android:useDefaultMargins="false">
-
-        <ImageButton
-            android:id="@+id/button_get_ticket"
-            android:layout_width="250sp"
-            android:layout_height="250sp"
-            android:background="@drawable/ticket_button"
-            android:src="@drawable/ic_card_travel_black_48dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false">
 
         <TextView
             android:layout_width="wrap_content"
@@ -122,17 +97,19 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="false">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_gravity="end"
             android:fontFamily="@string/font"
-            android:singleLine="false"
             android:text="@string/latest"
             android:textAllCaps="true"
             android:textColor="@android:color/black"
@@ -150,5 +127,15 @@
             android:textSize="23sp" />
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/button_get_ticket"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="center"
+        android:adjustViewBounds="true"
+        android:background="@drawable/ticket_button"
+        android:src="@drawable/ic_card_travel_black_48dp"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
