Added resources to push notifications

--- a/app/src/main/res/values/buses.xml
+++ b/app/src/main/res/values/buses.xml
@@ -88,4 +88,7 @@
         <item>hybrid</item>
     </string-array>
 
+    <string-array name="bsim">
+        <item>Ericsson$</item>
+    </string-array>
 </resources>
