Added Anton's wifi to simulator for testing

--- a/app/src/main/res/values/buses.xml
+++ b/app/src/main/res/values/buses.xml
@@ -89,6 +89,10 @@
     </string-array>
 
     <string-array name="bsim">
-        <item>Ericsson$</item>
+        <item>Ericsson$Vin_Num_001</item>
+        <item>YV3U0V222FA100001</item>
+        <item>EOG 001</item>
+        <item>34:23:87:6F:B5:8D</item>
+        <item>hybrid</item>
     </string-array>
 </resources>
