--- a/app/src/main/res/layout/busline_button.xml
+++ b/app/src/main/res/layout/busline_button.xml
@@ -19,7 +19,9 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/timeLeftLinearLayout"
         android:layout_toLeftOf="@+id/timeLeftLinearLayout"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="14dp" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -45,7 +47,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="min"
-            android:id="@+id/textView"
+            android:id="@+id/minBelowTextView"
             android:gravity="center"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
