--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -16,13 +16,14 @@
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="23sp"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_above="@+id/countdown_progressbar"
         android:layout_centerHorizontal="true" />
 
     <ProgressBar
         android:id="@+id/countdown_progressbar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:indeterminate="false"
@@ -130,7 +131,7 @@
 
     <ImageButton
         android:id="@+id/button_get_ticket"
-        android:layout_width="fill_parent"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:scaleType="center"
         android:adjustViewBounds="true"
